--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,14 @@
 
 /* Corpo da página */
 body {
-  background-color: #f4f4f4;
+  background-color: rgb(50, 39, 61);
   color: #333;
   font-size: 16px;
 }
 
 /* Cabeçalho */
 header {
-  background-color: #005e7a; /* Cor azul */
+  background-color: rgb(107, 19, 81);
   color: white;
   padding: 20px 0;
   text-align: center;
@@ -46,7 +46,7 @@ header nav a:hover {
 }
 
 .auth-container section {
-  background-color: white;
+  background-color: rgb(50, 39, 61);
   padding: 20px;
   border-radius: 8px;
   width: 40%;
@@ -55,7 +55,7 @@ header nav a:hover {
 h2 {
   margin-bottom: 20px;
   font-size: 1.4em;
-  color: #005e7a;
+  color: white;
 }
 
 input[type="email"],
@@ -66,15 +66,16 @@ textarea {
   width: 100%;
   padding: 10px;
   margin-bottom: 15px;
-  border: 1px solid #ddd;
+  border:none;
   border-radius: 4px;
   font-size: 1em;
+  background-color: rgb(63, 9, 47);
 }
 
 button {
   width: 100%;
   padding: 12px;
-  background-color: #005e7a;
+  background-color: rgb(107, 19, 81);
   color: white;
   border: none;
   font-size: 1.1em;
@@ -89,7 +90,7 @@ button:hover {
 /* Formulário de Anunciar Imóvel */
 .property-form {
   padding: 50px;
-  background-color: white;
+  background-color: rgb(107, 19, 81);
   margin: 0 auto;
   border-radius: 8px;
   width: 50%;
@@ -106,11 +107,15 @@ button:hover {
 }
 
 .property-form button {
-  background-color: #28a745;
+  background-color: rgb(65, 4, 44);
+  box-shadow: 0 5px 0 rgb(46, 1, 30);
+  transition: all linear .05s;
 }
 
-.property-form button:hover {
-  background-color: #218838;
+.property-form button:active {
+  background-color: rgb(87, 13, 61);
+  box-shadow: 0 0 0 black;
+  transform: translateY(5px);
 }
 
 /* Busca Avançada */
@@ -135,7 +140,7 @@ button:hover {
 }
 
 .search button {
-  background-color: #005e7a;
+  background-color: rgb(107, 19, 81);
   color: white;
   border: none;
   padding: 10px 20px;
@@ -157,7 +162,7 @@ button:hover {
 .featured h2 {
   text-align: center;
   font-size: 2em;
-  color: #005e7a;
+  color: white;
 }
 
 .property-list {
@@ -195,7 +200,7 @@ button:hover {
 }
 
 .property-card a {
-  color: #005e7a;
+  color: rgb(107, 19, 81);
   text-decoration: none;
   font-weight: bold;
 }
